Edited wiki page through web user interface.

--- a/wiki/UpdateLog.wiki
+++ b/wiki/UpdateLog.wiki
@@ -18,5 +18,6 @@
  # ~~支持Midas中自重信息的自动转换~~；
  # ~~支持单元局部坐标系下线形分布梁单元荷载的转换~~；（对于多线性梁单元荷载需要在ansys中对梁单元进行细分）
  # 支持单元局部坐标系下单一集中梁单元荷载的转换；
+ # 支持节点局部坐标轴的转换，用于施加约束条件和提取反力（*LocalAxis命令）
 
 (*注*：画线功能已在现有源代码中实现)
