Edited wiki page through web user interface.

--- a/wiki/UpdateLog.wiki
+++ b/wiki/UpdateLog.wiki
@@ -1,5 +1,13 @@
 #labels Phase-Design
 # 软件主要更新记录.
+==Midas2ANSYS_V1.0.0.18==
+
+ # MIDAS中节点荷载转换；
+ # 对MIDAS中板单元的支持；
+ # 支持荷载工况的自动转换；
+ # 支持Midas中自重信息的自动转换；
+ # 支持单元局部坐标系下线形分布梁单元荷载的转换；（对于多线性梁单元荷载需要在ansys中对梁单元进行细分）
+
 
 ==Midas2ANSYS_V1.0.0.17==
 
@@ -10,13 +18,8 @@
 
 ==待开发功能==
 
- # ~~MIDAS中节点荷载转换~~；
  # 对MIDAS中Cable单元的支持；
- # ~~对MIDAS中板单元的支持~~；
- # ~~支持荷载工况的自动转换~~；
  # ANSYS材料模型数据的智能输出；
- # ~~支持Midas中自重信息的自动转换~~；
- # ~~支持单元局部坐标系下线形分布梁单元荷载的转换~~；（对于多线性梁单元荷载需要在ansys中对梁单元进行细分）
  # 支持单元局部坐标系下单一集中梁单元荷载的转换；
  # 支持节点局部坐标轴的转换，用于施加约束条件和提取反力（LocalAxis 命令）
 
