Edited wiki page UpdateLog through web user interface.

--- a/wiki/UpdateLog.wiki
+++ b/wiki/UpdateLog.wiki
@@ -1,5 +1,15 @@
 #labels Phase-Design
 # 软件主要更新记录.
+==Midas2ANSYS_V1.0.0.58==
+===功能:===
+ # 支持自定义截面（SPC截面编辑器生成的截面）信息的转换；
+ # Midas结构组信息自动转换为Ansys中的Compents，可另生成宏文件；
+ # Midas中的刚性连接自动转换为Ansys中的节点耦合(cp)；
+ # (整体坐标系下梁单元荷载暂按单元局部坐标系转换)；
+===界面:===
+ # 添加转换信息提示文本框；
+ # 修正了一些其它小bug.
+
 ==Midas2ANSYS_V1.0.0.18==
 
  # MIDAS中节点荷载转换；
