Edited wiki page UpdateLog through web user interface.

--- a/wiki/UpdateLog.wiki
+++ b/wiki/UpdateLog.wiki
@@ -3,6 +3,7 @@
 ==Midas2ANSYS_V1.0.0.58==
 ===功能:===
  # 支持自定义截面（SPC截面编辑器生成的截面）信息的转换；
+ # 支持Midas桁架单元的转换；
  # Midas结构组信息自动转换为Ansys中的Compents，可另生成宏文件；
  # Midas中的刚性连接自动转换为Ansys中的节点耦合(cp)；
  # (整体坐标系下梁单元荷载暂按单元局部坐标系转换)；
@@ -25,12 +26,3 @@
  # MIDAS中的单元Beta角自动转化为ANSYS中的单元keypoint；
  # 支持MIDAS中用户自定义截面（H型、T型、圆型、矩型、箱型）的转化；
  # 支持MIDAS中“一般约束”边界条件的转化。
-
-==待开发功能==
-
- # 对MIDAS中Cable单元的支持；
- # ANSYS材料模型数据的智能输出；
- # 支持单元局部坐标系下单一集中梁单元荷载的转换；
- # 支持节点局部坐标轴的转换，用于施加约束条件和提取反力（LocalAxis 命令）
-
-(*注*：画线功能已在现有源代码中实现)
